Add support for HBAR, RUNE, and SCRT extra info in exchange (#2411)
* Add support for HBAR, RUNE, and SCRT extra info in exchange

* remove shouldAddExtraId

--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -357,6 +357,7 @@
   "event": "Ereignis",
   "events": "Veranstaltungen",
   "exchange": "Tauschen",
+  "exchange_extra_info": "Bitte vergessen Sie nicht, das Memo oder die zusätzliche ID anzugeben, während Sie diese Transaktion für den Austausch senden",
   "exchange_incorrect_current_wallet_for_xmr": "Wenn Sie XMR aus Ihrem Cake Wallet Monero-Saldo tauschen möchten, wechseln Sie zuerst zu Ihrer Monero-Wallet.",
   "exchange_new_template": "Neue Vorlage",
   "exchange_provider_unsupported": "${providerName} wird nicht mehr unterstützt!",
@@ -933,7 +934,6 @@
   "token_name": "Token-Name, z. B.: Tether",
   "token_symbol": "Token-Symbol, z. B.: USDT",
   "tokenID": "AUSWEIS",
-  "ton_extra_info": "Bitte vergessen Sie nicht, die Memo -ID anzugeben, während Sie die TON -Transaktion für den Austausch senden",
   "tor_connection": "Tor-Verbindung",
   "tor_connection_timeout": "TOR -Verbindungs ​​-Zeitüberschreitung",
   "tor_experimental": "Dies ist eine experimentelle Funktion, nicht alle Verbindungen, die aus Kuchen -Wallet -Stütze für die Routing hergestellt werden. Einige Verbindungen können ClearNET verwenden, um den App -Traffic -App -TOR mit dem VPN -Modus vollständig zu verwenden.",
@@ -1107,13 +1107,11 @@
   "widgets_seed": "Seed",
   "wouoldLikeToConnect": "möchte mich gerne vernetzen",
   "write_down_backup_password": "Bitte notieren Sie sich Ihr Sicherungskennwort, das für den Import Ihrer Sicherungsdateien gebraucht wird.",
-  "xlm_extra_info": "Bitte vergessen Sie nicht, die Memo-ID anzugeben, während Sie die XLM-Transaktion für den Austausch senden",
   "xmr_available_balance": "Verfügbares Guthaben",
   "xmr_full_balance": "Gesamtguthaben",
   "xmr_hidden": "Versteckt",
   "xmr_to_error": "XMR.TO-Fehler",
   "xmr_to_error_description": "Ungültiger Betrag. Höchstgrenze 8 Stellen nach dem Dezimalpunkt",
-  "xrp_extra_info": "Bitte vergessen Sie nicht, das Ziel-Tag anzugeben, während Sie die XRP-Transaktion für den Austausch senden",
   "yat": "Yat",
   "yat_address": "Yat-Adresse",
   "yat_alert_content": "Cake Wallet-Benutzer können jetzt alle ihre Lieblingswährungen mit einem einzigartigen Emoji-basierten Benutzernamen senden und empfangen.",
