--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -357,6 +357,7 @@
   "event": "Peristiwa",
   "events": "Acara",
   "exchange": "Menukarkan",
+  "exchange_extra_info": "Harap jangan lupa untuk menentukan memo atau ID tambahan saat mengirim transaksi ini untuk pertukaran",
   "exchange_incorrect_current_wallet_for_xmr": "Jika Anda ingin bertukar XMR dari Saldo Monero Dompet Kue Anda, silakan beralih ke Monero Wallet Anda terlebih dahulu.",
   "exchange_new_template": "Template baru",
   "exchange_provider_unsupported": "${providerName} tidak lagi didukung!",
@@ -935,7 +936,6 @@
   "token_name": "Nama token misalnya: Tether",
   "token_symbol": "Simbol token misalnya: USDT",
   "tokenID": "PENGENAL",
-  "ton_extra_info": "Harap jangan lupa untuk menentukan ID memo saat mengirim transaksi ton untuk pertukaran",
   "tor_connection": "koneksi Tor",
   "tor_connection_timeout": "Tor Connection Timeout",
   "tor_experimental": "Ini adalah fitur eksperimental, tidak semua koneksi yang terbuat dari dukungan dompet kue untuk routing - beberapa koneksi dapat menggunakan clearnet, untuk sepenuhnya merutekan aplikasi lalu lintas menggunakan untuk mode VPN.",
@@ -1107,13 +1107,11 @@
   "widgets_seed": "Biji",
   "wouoldLikeToConnect": "ingin terhubung",
   "write_down_backup_password": "Silakan menuliskan kata sandi cadangan Anda, yang digunakan untuk impor file cadangan Anda.",
-  "xlm_extra_info": "Jangan lupa untuk menentukan ID Memo saat mengirim transaksi XLM untuk pertukaran",
   "xmr_available_balance": "Saldo Tersedia",
   "xmr_full_balance": "Saldo Penuh",
   "xmr_hidden": "Tersembunyi",
   "xmr_to_error": "XMR.TO error",
   "xmr_to_error_description": "Jumlah tidak valid. Batas maksimal 8 digit setelah koma",
-  "xrp_extra_info": "Jangan lupa untuk menentukan Tag Tujuan saat mengirim transaksi XRP untuk pertukaran",
   "yat": "Yat",
   "yat_address": "Alamat Yat",
   "yat_alert_content": "Pengguna Cake Wallet sekarang dapat mengirim dan menerima semua mata uang favorit mereka dengan nama pengguna berbasis emoji yang satu-of-a-kind.",
