--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -357,6 +357,7 @@
   "event": "イベント",
   "events": "イベント",
   "exchange": "交換",
+  "exchange_extra_info": "Exchangeのためにこのトランザクションを送信する際に、メモまたは追加IDを指定することを忘れないでください",
   "exchange_incorrect_current_wallet_for_xmr": "XMRをケーキウォレットモネロバランスから交換したい場合は、最初にMoneroウォレットに切り替えてください。",
   "exchange_new_template": "新しいテンプレート",
   "exchange_provider_unsupported": "${providerName}はサポートされなくなりました！",
@@ -933,7 +934,6 @@
   "token_name": "トークン名 例: Tether",
   "token_symbol": "トークンシンボル 例: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Exchangeのトントランザクションを送信しながら、メモIDを指定することを忘れないでください",
   "tor_connection": "Tor接続",
   "tor_connection_timeout": "TOR接続タイムアウト",
   "tor_experimental": "これは実験的な機能であり、ケーキウォレットサポートTORルーティングから作成されたすべての接続ではありません。一部の接続では、APPトラフィックをVPNモードで完全にルーティングするために、ClearNetを使用する場合があります。",
@@ -1105,13 +1105,11 @@
   "widgets_seed": "シード",
   "wouoldLikeToConnect": "接続したいです",
   "write_down_backup_password": "バックアップファイルのインポートに使用されるバックアップパスワードを書き留めてください。",
-  "xlm_extra_info": "交換用のXLMトランザクションを送信するときに、メモIDを指定することを忘れないでください",
   "xmr_available_balance": "利用可能残高",
   "xmr_full_balance": "フルバランス",
   "xmr_hidden": "非表示",
   "xmr_to_error": "XMR.TOエラー",
   "xmr_to_error_description": "金額が無効です。 小数点以下8桁の上限",
-  "xrp_extra_info": "取引所のXRPトランザクションを送信するときに、宛先タグを指定することを忘れないでください",
   "yat": "Yat",
   "yat_address": "Yat住所",
   "yat_alert_content": "Cake Walletユーザーは、独自の絵文字ベースのユーザー名を使用して、お気に入りのすべての通貨を送受信できるようになりました。",
