--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -357,6 +357,7 @@
   "event": "ပွဲ",
   "events": "အဲ့ဒါနဲ့",
   "exchange": "လဲလှယ်",
+  "exchange_extra_info": "ငွေလဲလှယ်မှုအတွက်ဤငွေပေးငွေယူကိုပေးပို့စဉ်မှတ်စုတိုသို့မဟုတ်အပို ID ကိုသတ်မှတ်ရန်မမေ့ပါနှင့်",
   "exchange_incorrect_current_wallet_for_xmr": "အကယ်. သင်သည် XMR ကိုသင်၏ကိတ်မုန့် Monero Balance မှ Swap ကိုလဲလှယ်လိုပါကသင်၏ Monero Wallet ကိုပထမဆုံးအကြိမ်ပြောင်းပါ။",
   "exchange_new_template": "ပုံစံအသစ်",
   "exchange_provider_unsupported": "${providerName} မရှိတော့ပါ!",
@@ -932,7 +933,6 @@
   "token_name": "တိုကင်အမည် ဥပမာ- Tether",
   "token_symbol": "တိုကင်သင်္ကေတ ဥပမာ- USDT",
   "tokenID": "အမှတ်သညာ",
-  "ton_extra_info": "ငွေလဲလှယ်မှုအတွက်တန်ပြန်ငွေပေးငွေယူကိုပို့နေစဉ် Memo ID ကိုသတ်မှတ်ရန်မမေ့ပါနှင့်",
   "tor_connection": "Tor ချိတ်ဆက်မှု",
   "tor_connection_timeout": "Tor Connection အချိန်ကုန်",
   "tor_experimental": "၎င်းသည်စမ်းသပ်အင်္ဂါရပ်တစ်ခုဖြစ်ပြီးကိတ်မုန့်ပိုက်ဆံအိတ်ကိုပံ့ပိုးပေးသော Tor Routing မှပြုလုပ်သောဆက်သွယ်မှုအားလုံးမှာ Connections သည် Concernet ကို အသုံးပြု. VPN tor ကို VPN Mode ဖြင့် Tor ကို အသုံးပြု. Concernet ကိုသုံးနိုင်သည်။",
@@ -1104,13 +1104,11 @@
   "widgets_seed": "မျိုးစေ့",
   "wouoldLikeToConnect": "ချိတ်ဆက်ချင်ပါတယ်။",
   "write_down_backup_password": "သင်၏ အရန်ဖိုင်များကို တင်သွင်းရန်အတွက် အသုံးပြုသည့် သင်၏ အရန်စကားဝှက်ကို ချရေးပါ။",
-  "xlm_extra_info": "လဲလှယ်မှုအတွက် XLM ငွေလွှဲပို့နေစဉ် Memo ID ကို သတ်မှတ်ရန် မမေ့ပါနှင့်",
   "xmr_available_balance": "လက်ကျန်ငွေ ရရှိနိုင်",
   "xmr_full_balance": "မျှတမှု အပြည့်အစုံ",
   "xmr_hidden": "ဝှက်ထားသည်။",
   "xmr_to_error": "XMR.TO အမှား",
   "xmr_to_error_description": "ပမာဏ မမှန်ပါ။ ဒဿမအမှတ်ပြီးနောက် ဂဏန်း ၈ လုံးတွင် အများဆုံးကန့်သတ်ချက်",
-  "xrp_extra_info": "လဲလှယ်မှုအတွက် XRP ငွေလွှဲပို့နေစဉ် Destination Tag ကို သတ်မှတ်ရန် မမေ့ပါနှင့်",
   "yat": "ယတ်",
   "yat_address": "Yat လိပ်စာ",
   "yat_alert_content": "Cake Wallet အသုံးပြုသူများသည် တစ်မျိုးတည်းသော အီမိုဂျီအခြေခံအသုံးပြုသူအမည်ဖြင့် ၎င်းတို့၏ စိတ်ကြိုက်ငွေကြေးအားလုံးကို ပေးပို့နိုင်ပါပြီ။",
