--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -357,6 +357,7 @@
   "event": "Wydarzenie",
   "events": "Wydarzenia",
   "exchange": "Giełda",
+  "exchange_extra_info": "Nie zapomnij określić notatki lub dodatkowego identyfikatora podczas wysyłania tej transakcji na giełdę",
   "exchange_incorrect_current_wallet_for_xmr": "Jeśli chcesz zamienić XMR z salda Monero, najpierw przejdź na portfel Monero.",
   "exchange_new_template": "Nowy szablon wymiany",
   "exchange_provider_unsupported": "${providerName} nie jest już obsługiwany!",
@@ -932,7 +933,6 @@
   "token_name": "Nazwa tokena, np.: Tether",
   "token_symbol": "Symbol tokena np.: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Nie zapomnij określić identyfikatora notatki podczas wysyłania transakcji TON dla wymiany",
   "tor_connection": "Połączenie przez Tor",
   "tor_connection_timeout": "Tor Connection Timeout",
   "tor_experimental": "Jest to funkcja eksperymentalna. Nie wszystkie połączenia wykonane z Cake Wallet korzystają z Tor, niektóre połączenia mogą korzystać z Clearnet, aby w pełni przekierować ruch skorzystaj z Tor w trybie VPN.",
@@ -1104,13 +1104,11 @@
   "widgets_seed": "Seed",
   "wouoldLikeToConnect": "chciałbym się połączyć",
   "write_down_backup_password": "Zapisz swoje hasło kopii zapasowej, które jest używane do importowania plików kopii zapasowych.",
-  "xlm_extra_info": "Nie zapomnij podać dodatkowego identyfikatora (memo) podczas wysyłania transakcji XLM do wymiany",
   "xmr_available_balance": "Dostępne środki",
   "xmr_full_balance": "Pełne saldo",
   "xmr_hidden": "Ukryte",
   "xmr_to_error": "Błąd XMR.TO",
   "xmr_to_error_description": "Nieprawidłowa kwota. Maksymalny limit to 8 cyfr po przecinku",
-  "xrp_extra_info": "Nie zapomnij podać tagu docelowego podczas wysyłania transakcji XRP do wymiany",
   "yat": "Yat",
   "yat_address": "Adres Yat",
   "yat_alert_content": "Użytkownicy Cake Wallet mogą teraz wysyłać i odbierać wszystkie swoje ulubione waluty za pomocą jedynej w swoim rodzaju nazwy użytkownika opartej na emoji.",
