--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -357,6 +357,7 @@
   "event": "Событие",
   "events": "События",
   "exchange": "Обмен",
+  "exchange_extra_info": "Пожалуйста, не забудьте указать меморандум или дополнительный идентификатор при отправке этой транзакции для обмена",
   "exchange_incorrect_current_wallet_for_xmr": "Если вы хотите поменять XMR с баланса с кошельком для торта Monero, сначала переключитесь на свой кошелек Monero.",
   "exchange_new_template": "Новый шаблон",
   "exchange_provider_unsupported": "${providerName} больше не поддерживается!",
@@ -933,7 +934,6 @@
   "token_name": "Имя токена, например: Tether",
   "token_symbol": "Символ токена, например: USDT",
   "tokenID": "ИДЕНТИФИКАТОР",
-  "ton_extra_info": "Пожалуйста, не забудьте указать идентификатор записки при отправке TON транзакции для обмена",
   "tor_connection": "Тор соединение",
   "tor_connection_timeout": "TOR Timeout",
   "tor_experimental": "Это экспериментальная функция, а не все соединения, сделанные из поддержки TOR для торта - некоторые подключения могут использовать ClearNet, чтобы полностью маршрутироваться с использованием трафика приложений в режиме VPN.",
@@ -1105,13 +1105,11 @@
   "widgets_seed": "Мнемоническая фраза",
   "wouoldLikeToConnect": "хотел бы подключиться",
   "write_down_backup_password": "Запишите пароль резервной копии, который используется для импорта файлов резервных копий.",
-  "xlm_extra_info": "Не забудьте указать Memo ID (памятка) при отправке транзакции XLM для обмена",
   "xmr_available_balance": "Доступный баланс",
   "xmr_full_balance": "Весь баланс",
   "xmr_hidden": "Скрыто",
   "xmr_to_error": "Ошибка XMR.TO",
   "xmr_to_error_description": "Недопустимая сумма. Максимум 8 цифр после десятичной точки",
-  "xrp_extra_info": "Не забудьте указать целевой тег при отправке транзакции XRP для обмена",
   "yat": "Yat",
   "yat_address": "Yat адрес",
   "yat_alert_content": "Пользователи Cake Wallet теперь могут отправлять и получать криптовалюту при помощи уникального имени пользователя на основе эмодзи.",
