--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -357,6 +357,7 @@
   "event": "Etkinlik",
   "events": "Olaylar",
   "exchange": "Değişme",
+  "exchange_extra_info": "Bu işlemi borsaya gönderirken lütfen notu veya ekstra kimliği belirtmeyi unutmayın.",
   "exchange_incorrect_current_wallet_for_xmr": "XMR'yi kek cüzdanı Monero bakiyenizden değiştirmek istiyorsanız, lütfen önce Monero cüzdanınıza geçin.",
   "exchange_new_template": "Yeni şablon",
   "exchange_provider_unsupported": "${providerName} artık desteklenmiyor!",
@@ -932,7 +933,6 @@
   "token_name": "Belirteç adı, örneğin: Tether",
   "token_symbol": "Jeton sembolü, örneğin: USDT",
   "tokenID": "İD",
-  "ton_extra_info": "Lütfen değişim için ton işlemini gönderirken not kimliğini belirtmeyi unutmayın",
   "tor_connection": "Tor bağlantısı",
   "tor_connection_timeout": "Tor bağlantı zaman aşımı",
   "tor_experimental": "Bu deneysel bir özelliktir, kek cüzdanı desteğinden yapılan tüm bağlantılar değil, TOR yönlendirmesinden yapılmıştır - bazı bağlantılar, VPN moduyla uygulama trafik kullanımını tam olarak yönlendirmek için ClearNet kullanabilir.",
@@ -1104,13 +1104,11 @@
   "widgets_seed": "Tohum",
   "wouoldLikeToConnect": "bağlanmak istiyorum",
   "write_down_backup_password": "Lütfen yedekleme dosyasının içe aktarılması için kullanılan yedekleme parolanı not et.",
-  "xlm_extra_info": "Lütfen takas için XLM işlemi gönderirken Memo ID'yi belirtmeyi unutmayın",
   "xmr_available_balance": "Kullanılabilir Bakiye",
   "xmr_full_balance": "Tüm Bakiye",
   "xmr_hidden": "Gizli",
   "xmr_to_error": "XMR.TO hatası",
   "xmr_to_error_description": "Geçersiz tutar. Ondalık noktadan sonra maksimum limit 8 basamaktır",
-  "xrp_extra_info": "Lütfen takas için XRP işlemi gönderirken Hedef Etiketi (Destination Tag) belirtmeyi unutmayın",
   "yat": "Yat",
   "yat_address": "Yat adresi",
   "yat_alert_content": "Cake Wallet kullanıcıları artık tüm favori koin birimlerini benzersiz emoji tabanlı kullanıcı adıyla gönderebilir ve alabilirler.",
