--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -357,6 +357,7 @@
   "event": "Подія",
   "events": "Події",
   "exchange": "Обмін",
+  "exchange_extra_info": "Не забудьте вказати пам’ятку або додатковий ідентифікатор під час надсилання цієї транзакції для обміну",
   "exchange_incorrect_current_wallet_for_xmr": "Якщо ви хочете поміняти XMR зі свого балансу для тортів Monero Balance, спочатку перейдіть на свій гаманець Monero.",
   "exchange_new_template": "Новий шаблон",
   "exchange_provider_unsupported": "${providerName} більше не підтримується!",
@@ -933,7 +934,6 @@
   "token_name": "Назва токена, наприклад: Tether",
   "token_symbol": "Символ маркера, наприклад: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Не забудьте вказати ідентифікатор пам’яті під час надсилання транзакції TON для обміну",
   "tor_connection": "Підключення Tor",
   "tor_connection_timeout": "Тайм -аут підключення TOR",
   "tor_experimental": "Це експериментальна функція, не всі з'єднання, зроблені з підтримки тортів, що підтримують маршрутизацію - деякі з'єднання можуть використовувати Clearnet, щоб повністю маршрутизувати трафік додатків, використовуючи TOR з режимом VPN.",
@@ -1105,13 +1105,11 @@
   "widgets_seed": "Мнемонічна фраза",
   "wouoldLikeToConnect": "хотів би підключитися",
   "write_down_backup_password": "Запишіть пароль резервної копії, який використовується для імпорту файлів резервних копій.",
-  "xlm_extra_info": "Будь ласка, не забудьте вказати ідентифікатор пам'ятки під час надсилання транзакції XLM для обміну",
   "xmr_available_balance": "Доступний баланс",
   "xmr_full_balance": "Весь баланс",
   "xmr_hidden": "Приховано",
   "xmr_to_error": "Помилка XMR.TO",
   "xmr_to_error_description": "Неприпустима сума. Максимум 8 цифр після десяткової коми",
-  "xrp_extra_info": "Будь ласка, не забудьте вказати тег призначення під час надсилання XRP-транзакції для обміну",
   "yat": "Yat",
   "yat_address": "Yat адреса",
   "yat_alert_content": "Користувачі Cake Wallet тепер можуть надсилати та отримувати криптовалюту за допомогою унікального імені користувача на основі смайликів.",
