--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -358,6 +358,7 @@
   "event": "Iṣẹlẹ",
   "events": "Awọn iṣẹlẹ",
   "exchange": "Paarọ",
+  "exchange_extra_info": "Jọwọ maṣe gbagbe lati tokasi akọsilẹ tabi id afikun lakoko ti o nfi iṣowo yii fun paṣipaarọ naa",
   "exchange_incorrect_current_wallet_for_xmr": "Ti o ba fẹ lati yi XMR lati dọgba oyinbo oyinbo kekere rẹ ti a fi omi ṣan rẹ, jọwọ yipada si apamọwọ Monrou akọkọ.",
   "exchange_new_template": "Àwòṣe títun",
   "exchange_provider_unsupported": "${providerName} ko ni atilẹyin mọ!",
@@ -933,7 +934,6 @@
   "token_name": "Orukọ àmi fun apẹẹrẹ: Tether",
   "token_symbol": "Aami aami fun apẹẹrẹ: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Jọwọ maṣe gbagbe lati tokasi ID akọsilẹ lakoko fifiranṣẹ idunadura pupọ fun paṣipaarọ naa",
   "tor_connection": "Tor asopọ",
   "tor_connection_timeout": "Akoko asopọ asopọ",
   "tor_experimental": "Eyi jẹ ẹya ti esiperimenta ti a ṣe lati awọn Awoṣe Adwat atilẹyin ti o wa ni atilẹyin idiwọ - diẹ ninu awọn asopọ le lo imple, lati le ni ipa ọna App Prat pẹlu ipo VPN.",
@@ -1105,13 +1105,11 @@
   "widgets_seed": "Hóró",
   "wouoldLikeToConnect": "yoo fẹ lati sopọ",
   "write_down_backup_password": "Ẹ jọ̀wọ́ ẹ̀dà ọ̀rọ̀ aṣínà ti ẹ̀dà nípamọ́ yín tó máa ń bá yín ṣí àkọsílẹ̀ yín l'ẹ kọ sílẹ̀.",
-  "xlm_extra_info": "Ẹ jọ̀wọ́ ẹ kò gbàgbé pèsè àmì ìdánimọ̀ àkọsílẹ̀ t'ẹ́ ń bá ránṣẹ́ pàṣípààrọ̀ ti XLM yín sí ilé ìfowóṣòwò",
   "xmr_available_balance": "Owó tó wà ḿbí",
   "xmr_full_balance": "Ìyókù owó",
   "xmr_hidden": "Bìbò",
   "xmr_to_error": "XMR.To aṣiṣe",
   "xmr_to_error_description": "Iye ti ko wulo. Iwọn to pọju 8 nọmba lẹhin aaye eleemewa",
-  "xrp_extra_info": "Ẹ jọ̀wọ́ ẹ kò gbàgbé pèsè orúkọ̀ àdírẹ́sì ti a ránṣẹ́ sí t'ẹ́ bá ránṣẹ pàṣípààrọ̀ ti XRP yín sílé ìfowóṣòwò",
   "yat": "Yat",
   "yat_address": "Àdírẹ́sì Yat",
   "yat_alert_content": "Àwọn olùṣàmúlò ti Cake Wallet lè fi orúkọ olùṣàmúlò t'á dá lórí emójì tó kì í jọra ránṣẹ́ àti gba gbogbo àwọn irú owó tíwọn yàn láàyò lọ́wọ́lọ́wọ́.",
