--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -357,6 +357,7 @@
   "event": "事件",
   "events": "活动",
   "exchange": "交换",
+  "exchange_extra_info": "请不要忘记在向交易所发送此交易时指定备忘录或额外的ID",
   "exchange_incorrect_current_wallet_for_xmr": "如果您想从蛋糕钱包Monero余额中交换XMR，请先切换到Monero Wallet。",
   "exchange_new_template": "新模板",
   "exchange_provider_unsupported": "${providerName}不再支持！",
@@ -932,7 +933,6 @@
   "token_name": "代币名称例如：Tether",
   "token_symbol": "代币符号例如：USDT",
   "tokenID": "ID",
-  "ton_extra_info": "请不要忘记在发送TON交易时指定备忘录",
   "tor_connection": "Tor连接",
   "tor_connection_timeout": "TOR连接超时",
   "tor_experimental": "这是一个实验功能，并非所有由Cake Wallet Support Tor路由组成的连接 - 某些连接可能会使用Clearnet，以便完全路由App App App Appl使用VPN模式。",
@@ -1104,13 +1104,11 @@
   "widgets_seed": "种子",
   "wouoldLikeToConnect": "想要连接",
   "write_down_backup_password": "请写下您的备份密码，该密码用于导入备份文件。",
-  "xlm_extra_info": "发送用于交换的XLM交易时，请不要忘记指定备忘录ID",
   "xmr_available_balance": "可用余额 ",
   "xmr_full_balance": "全部余额",
   "xmr_hidden": "隐藏",
   "xmr_to_error": "XMR.TO 错误",
   "xmr_to_error_description": "无效的金额。 小数点后最多8位数字",
-  "xrp_extra_info": "发送用于交换的XRP交易时，请不要忘记指定目标Tag",
   "yat": "Yat",
   "yat_address": "Yat 地址",
   "yat_alert_content": "Cake Wallet 用戶現在可以使用獨一無二的基於表情符號的用戶名發送和接收他們喜歡的所有貨幣。",
