--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -357,6 +357,7 @@
   "event": "Събитие",
   "events": "събития",
   "exchange": "Обмен",
+  "exchange_extra_info": "Моля, не забравяйте да посочите бележката или допълнителен лична карта, докато изпращате тази транзакция за борсата",
   "exchange_incorrect_current_wallet_for_xmr": "Ако искате да смените XMR от вашия баланс на портфейла на тортата Monero, моля, преминете първо към вашия портфейл Monero.",
   "exchange_new_template": "Нов шаблон",
   "exchange_provider_unsupported": "${providerName} вече не се поддържа!",
@@ -932,7 +933,6 @@
   "token_name": "Име на токена, напр.: Tether",
   "token_symbol": "Символ на токена, напр.: USDT",
   "tokenID": "документ за самоличност",
-  "ton_extra_info": "Моля, не забравяйте да посочите идентификационния номер на бележката, докато изпращате транзакцията TON за борсата",
   "tor_connection": "Tor връзка",
   "tor_connection_timeout": "TOR ВРЕМЕ НА ВРЕМЕТО ВРЕМЕ",
   "tor_experimental": "Това е експериментална функция, не всички връзки, направени от маршрутизиране на тортата за портфейл за торта - някои връзки могат да използват ClearNet, за да се насочи напълно да използва трафик на приложения TOR с VPN режим.",
@@ -1104,13 +1104,11 @@
   "widgets_seed": "Seed",
   "wouoldLikeToConnect": "иска да се свърже",
   "write_down_backup_password": "Моля, запишете своята парола за възстановяване. Тя се използва за импортиране на резервни копия на Вашите файлове.",
-  "xlm_extra_info": "Не забравяйте да дадете Memo ID-то, докато изпращате XLM транзакцията за обмена",
   "xmr_available_balance": "Наличен баланс",
   "xmr_full_balance": "Пълен баланс",
   "xmr_hidden": "Скрит",
   "xmr_to_error": "XMR.TO грешка",
   "xmr_to_error_description": "Невалидна сума - най-много 8 цифри след десетичната запетая",
-  "xrp_extra_info": "Не забравяйте да дадете Destination Tag-а, когато изпращате XRP транзакцията за обмена",
   "yat": "Yat",
   "yat_address": "Yat Адрес",
   "yat_alert_content": "Потребителите на Cake Wallet вече могат да изпращат и получават любимите си валути чрез неповторимо потребителско име от емоджита.",
