--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -357,6 +357,7 @@
   "event": "Event",
   "events": "Events",
   "exchange": "Exchange",
+  "exchange_extra_info": "Please don’t forget to specify the Memo or Extra ID while sending this transaction for the exchange",
   "exchange_incorrect_current_wallet_for_xmr": "If you want to swap XMR from your Cake Wallet Monero balance, please switch to your Monero wallet first.",
   "exchange_new_template": "New template",
   "exchange_provider_unsupported": "${providerName} is no longer supported!",
@@ -933,7 +934,6 @@
   "token_name": "Token name eg: Tether",
   "token_symbol": "Token symbol eg: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Please don’t forget to specify the Memo ID while sending the TON transaction for the exchange",
   "tor_connection": "Tor connection",
   "tor_connection_timeout": "Tor connection timeout",
   "tor_experimental": "This is an experimental feature, not all connections made from Cake Wallet support Tor routing - some connections may use clearnet, in order to fully route app traffic use Tor with VPN mode.",
@@ -1105,13 +1105,11 @@
   "widgets_seed": "Seed",
   "wouoldLikeToConnect": "would like to connect",
   "write_down_backup_password": "Please write down your backup password, which is used for the import of your backup files.",
-  "xlm_extra_info": "Please don’t forget to specify the Memo ID while sending the XLM transaction for the exchange",
   "xmr_available_balance": "Available Balance",
   "xmr_full_balance": "Full Balance",
   "xmr_hidden": "Hidden",
   "xmr_to_error": "XMR.TO error",
   "xmr_to_error_description": "Invalid amount. Maximum limit 8 digits after the decimal point",
-  "xrp_extra_info": "Please don’t forget to specify the Destination Tag while sending the XRP transaction for the exchange",
   "yat": "Yat",
   "yat_address": "Yat Address",
   "yat_alert_content": "Cake Wallet users can now send and receive all their favorite currencies with a one-of-a-kind emoji-based username.",
