--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -357,6 +357,7 @@
   "event": "Evento",
   "events": "Eventos",
   "exchange": "Intercambiar",
+  "exchange_extra_info": "No olvide especificar la nota o la identificación adicional al enviar esta transacción para el intercambio",
   "exchange_incorrect_current_wallet_for_xmr": "Si desea intercambiar XMR desde su balance de Monero en Cake Wallet, primero cambie a su billetera de Monero.",
   "exchange_new_template": "Nueva plantilla",
   "exchange_provider_unsupported": "¡${providerName} ya no es compatible!",
@@ -933,7 +934,6 @@
   "token_name": "Nombre del token, por ejemplo: Tether",
   "token_symbol": "Símbolo de token, por ejemplo: USDT",
   "tokenID": "IDENTIFICACIÓN",
-  "ton_extra_info": "No olvide especificar el ID de memo mientras envía la transacción TON para el intercambio",
   "tor_connection": "conexión tor",
   "tor_connection_timeout": "Tiempo de espera de conexión de Tor",
   "tor_experimental": "Esta es una característica experimental, no todas las conexiones hechas desde Cake Wallet soportan el enrutamiento por Tor. Algunas conexiones pueden usar el Internet normal. Para enrutar completamente el tráfico de la aplicación use Tor con el modo VPN.",
@@ -1106,13 +1106,11 @@
   "widgets_seed": "Semilla",
   "wouoldLikeToConnect": "quisiera conectar",
   "write_down_backup_password": "Escribe su contraseña de respaldo, que se utiliza para la importación de sus archivos de respaldo.",
-  "xlm_extra_info": "No olvides especificar el ID de nota al enviar la transacción XLM para el intercambio",
   "xmr_available_balance": "Saldo disponible",
   "xmr_full_balance": "Balance total",
   "xmr_hidden": "Oculto",
   "xmr_to_error": "Error de XMR.TO",
   "xmr_to_error_description": "Monto invalido. Límite máximo de 8 dígitos después del punto decimal",
-  "xrp_extra_info": "No olvides especificar la etiqueta de destino al enviar la transacción XRP para el intercambio",
   "yat": "Yat",
   "yat_address": "Dirección de Yat",
   "yat_alert_content": "Los usuarios de Cake Wallet ahora pueden enviar y recibir todas sus monedas favoritas con un nombre de usuario único basado en emoji.",
