--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -357,6 +357,7 @@
   "event": "Événement",
   "events": "Événements",
   "exchange": "Acheter / Vendre",
+  "exchange_extra_info": "N'oubliez pas de spécifier le mémo ou l'identifiant supplémentaire lors de l'envoi de cette transaction pour l'échange",
   "exchange_incorrect_current_wallet_for_xmr": "Si vous souhaitez échanger des XMR depuis le solde Monero de votre Cake Wallet, veuillez d'abord passer à votre portefeuille Monero.",
   "exchange_new_template": "Nouveau modèle d'échange",
   "exchange_provider_unsupported": "${providerName} n'est plus pris en charge !",
@@ -932,7 +933,6 @@
   "token_name": "Nom du token, par exemple : Tether",
   "token_symbol": "Symbole de token, par exemple : USDT",
   "tokenID": "IDENTIFIANT",
-  "ton_extra_info": "N'oubliez pas de spécifier l'identification de la note lors de l'envoi de la transaction TON pour l'échange",
   "tor_connection": "Connexion Tor",
   "tor_connection_timeout": "Tor Connection Timeout",
   "tor_experimental": "Il s'agit d'une caractéristique expérimentale, toutes les connexions faites à partir du portefeuille du portefeuille de gâteaux TOR ROUTING - Certaines connexions peuvent utiliser ClearNet, afin d'achever entièrement le trafic d'application Utiliser TOR avec le mode VPN.",
@@ -1104,13 +1104,11 @@
   "widgets_seed": "Phrase secrète (seed)",
   "wouoldLikeToConnect": "je voudrais me connecter",
   "write_down_backup_password": "Merci d'écrire votre mot de passe de sauvegarde, vous en aurez besoin lors de la relecture de vos fichiers de sauvegarde.",
-  "xlm_extra_info": "Merci de ne pas oublier de spécifier l'ID de mémo lors de l'envoi de la transaction XLM de l'échange",
   "xmr_available_balance": "Solde Disponible",
   "xmr_full_balance": "Solde Total",
   "xmr_hidden": "Caché",
   "xmr_to_error": "Erreur XMR.TO",
   "xmr_to_error_description": "Montant invalide. La partie décimale doit contenir au plus 8 chiffres",
-  "xrp_extra_info": "Merci de ne pas oublier de spécifier le tag de destination lors de l'envoi de la transaction XRP de l'échange",
   "yat": "Yat",
   "yat_address": "Adresse Yat",
   "yat_alert_content": "Les utilisateurs de Cake Wallet peuvent maintenant envoyer et recevoir leurs monnaies favorites avec un utilisateur unique en son genre basé sur les emojis.",
