--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -357,6 +357,7 @@
   "event": "Lamarin",
   "events": "Abubuwan da suka faru",
   "exchange": "Canji",
+  "exchange_extra_info": "Don Allah kar a manta su saka memba ko karin ID yayin aika wannan ma'amalar don musayar",
   "exchange_incorrect_current_wallet_for_xmr": "Idan kana son canza XMR daga walat ɗin Bed Wallet ɗinka, da fatan za a canza zuwa walat ɗinku na Monero.",
   "exchange_new_template": "Sabon template",
   "exchange_provider_unsupported": "${providerName}",
@@ -934,7 +935,6 @@
   "token_name": "Alamar sunan misali: Tether",
   "token_symbol": "Alamar alama misali: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Don Allah kar a manta su saka ID na Memo yayin aikawa da ma'amala don musayar",
   "tor_connection": "Tor haɗin gwiwa",
   "tor_connection_timeout": "A lokacin Tor Haɗin",
   "tor_experimental": "Wannan fasalin gwaji ne, ba duk haɗin da aka yi ba daga Wall Wall Wall Walling goyon baya Tor Routing - don cikakken amfani da hanyar zirga-zirga amfani da tor tare da yanayin vpn.",
@@ -1107,13 +1107,11 @@
   "widgets_seed": "iri",
   "wouoldLikeToConnect": "ina son haɗi",
   "write_down_backup_password": "Da fatan za a rubuta kalmar sirrin ajiyar ku, wacce ake amfani da ita don shigo da fayilolin ajiyar ku.",
-  "xlm_extra_info": "Don Allah kar a manta da saka Memo ID yayin aika ma'amalar XLM don musayar",
   "xmr_available_balance": "Akwai Ma'auni",
   "xmr_full_balance": "Cikakken Ma'auni",
   "xmr_hidden": "Boye",
   "xmr_to_error": "XMR.TO kuskure",
   "xmr_to_error_description": "Adadin ba shi da inganci. Maksimum ɗaura 8 digiri bayan decimal point",
-  "xrp_extra_info": "Don Allah kar a manta da saka alamar Ƙaddamarwa yayin aika ma'amalar XRP don musayar",
   "yat": "Yat",
   "yat_address": "Yat Address",
   "yat_alert_content": "Masu amfani da Wallet ɗin Cake yanzu za su iya aikawa da karɓar duk kuɗin da suka fi so tare da sunan mai amfani na tushen emoji iri ɗaya.",
