--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -357,6 +357,7 @@
   "event": "이벤트",
   "events": "이벤트",
   "exchange": "교환",
+  "exchange_extra_info": "교환을 위해이 거래를 보내는 동안 메모 또는 추가 ID를 지정하는 것을 잊지 마십시오.",
   "exchange_incorrect_current_wallet_for_xmr": "Cake Wallet 모네로 잔액에서 XMR을 스왑하려면 먼저 모네로 지갑으로 전환하세요.",
   "exchange_new_template": "새 템플릿",
   "exchange_provider_unsupported": "${providerName}은(는) 더 이상 지원되지 않습니다!",
@@ -933,7 +934,6 @@
   "token_name": "토큰 이름 (예: Tether)",
   "token_symbol": "토큰 심볼 (예: USDT)",
   "tokenID": "ID",
-  "ton_extra_info": "교환을 위해 TON 트랜잭션을 보내는 동안 메모 ID를 지정하는 것을 잊지 마십시오.",
   "tor_connection": "Tor 연결",
   "tor_connection_timeout": "Tor 연결 시간 초과",
   "tor_experimental": "이것은 케이크 지갑 지원 Tor 라우팅으로 만든 모든 연결을 실험적인 기능입니다. 일부 연결은 Clearnet을 사용할 수 있습니다.",
@@ -1105,13 +1105,11 @@
   "widgets_seed": "시드",
   "wouoldLikeToConnect": "연결하고 싶습니다",
   "write_down_backup_password": "백업 파일 가져오기에 사용되는 백업 비밀번호를 적어두세요.",
-  "xlm_extra_info": "교환을 위해 XLM 트랜잭션을 보낼 때 메모 ID를 지정하는 것을 잊지 마세요.",
   "xmr_available_balance": "사용 가능 잔액",
   "xmr_full_balance": "전체 잔액",
   "xmr_hidden": "숨김",
   "xmr_to_error": "XMR.TO 오류",
   "xmr_to_error_description": "잘못된 금액입니다. 소수점 이하 최대 8자리",
-  "xrp_extra_info": "교환을 위해 XRP 트랜잭션을 보낼 때 목적지 태그를 지정하는 것을 잊지 마세요.",
   "yat": "Yat",
   "yat_address": "Yat 주소",
   "yat_alert_content": "Cake Wallet 사용자는 이제 고유한 이모지 기반 사용자 이름으로 좋아하는 모든 통화를 보내고 받을 수 있습니다.",
