--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -357,6 +357,7 @@
   "event": "เหตุการณ์",
   "events": "กิจกรรม",
   "exchange": "แลกเปลี่ยน",
+  "exchange_extra_info": "โปรดอย่าลืมระบุบันทึกหรือรหัสพิเศษในขณะที่ส่งธุรกรรมนี้สำหรับการแลกเปลี่ยน",
   "exchange_incorrect_current_wallet_for_xmr": "หากคุณต้องการสลับ XMR จาก Cake Wallet Monero Balance โปรดเปลี่ยนไปใช้กระเป๋าเงิน Monero ก่อน",
   "exchange_new_template": "เทมเพลทใหม่",
   "exchange_provider_unsupported": "${providerName} ไม่ได้รับการสนับสนุนอีกต่อไป!",
@@ -932,7 +933,6 @@
   "token_name": "ชื่อโทเค็น เช่น Tether",
   "token_symbol": "สัญลักษณ์โทเค็น เช่น USDT",
   "tokenID": "บัตรประจำตัวประชาชน",
-  "ton_extra_info": "โปรดอย่าลืมระบุรหัสบันทึกในขณะที่ส่งธุรกรรม TON สำหรับการแลกเปลี่ยน",
   "tor_connection": "การเชื่อมต่อทอร์",
   "tor_connection_timeout": "หมดเวลาเชื่อมต่อ tor",
   "tor_experimental": "นี่เป็นคุณสมบัติการทดลองไม่ใช่การเชื่อมต่อทั้งหมดที่ทำจากการรองรับเค้กกระเป๋าเงิน TOR การกำหนดเส้นทาง - การเชื่อมต่อบางอย่างอาจใช้ Clearnet เพื่อกำหนดเส้นทางการจราจรแอพใช้ TOR ด้วยโหมด VPN",
@@ -1104,13 +1104,11 @@
   "widgets_seed": "ซีด",
   "wouoldLikeToConnect": "ต้องการเชื่อมต่อ",
   "write_down_backup_password": "โปรดจดรหัสผ่านสำรองข้อมูลของคุณลงบนกระดาษ ซึ่งจะใช้ในการนำเข้าไฟล์สำรองข้อมูลของคุณ",
-  "xlm_extra_info": "โปรดอย่าลืมระบุ Memo ID ในขณะที่ส่งธุรกรรม XLM สำหรับการแลกเปลี่ยน",
   "xmr_available_balance": "ยอดคงเหลือที่สามารถใช้งานได้",
   "xmr_full_balance": "ยอดคงเหลือแบบเต็ม",
   "xmr_hidden": "ซ่อน",
   "xmr_to_error": "ข้อผิดพลาด XMR.TO",
   "xmr_to_error_description": "จำนวนไม่ถูกต้อง จำกัดขั้นสูง 8 หลักหลังจุดทศนิยม",
-  "xrp_extra_info": "โปรดอย่าลืมระบุ Destination Tag ในขณะที่ส่งธุรกรรม XRP สำหรับการแลกเปลี่ยน",
   "yat": "Yat",
   "yat_address": "ที่อยู่ Yat",
   "yat_alert_content": "ผู้ใช้งาน Cake Wallet สามารถส่งและรับเหรียญออนไลน์ทุกเหรียญที่ชื่นชอบของพวกเขาได้ง่ายขึ้นด้วยชื่อผู้ใช้งานที่พิเศษที่ระบุด้วยอีโมจิ",
