--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -357,6 +357,7 @@
   "event": "ﺐﯾﺮﻘﺗ",
   "events": "ﺕﺎﺒﯾﺮﻘﺗ",
   "exchange": "تبادلہ",
+  "exchange_extra_info": "ایکسچینج کے ل this اس لین دین کو بھیجتے وقت براہ کرم میمو یا اضافی ID کی وضاحت کرنا نہ بھولیں",
   "exchange_incorrect_current_wallet_for_xmr": "اگر آپ اپنے کیک پرس مونیرو بیلنس سے XMR تبدیل کرنا چاہتے ہیں تو ، براہ کرم پہلے اپنے مونیرو پرس میں جائیں۔",
   "exchange_new_template": "نیا سانچہ",
   "exchange_provider_unsupported": "${providerName} اب تعاون نہیں کیا جاتا ہے!",
@@ -934,7 +935,6 @@
   "token_name": "ٹوکن کا نام جیسے: Tether",
   "token_symbol": "ٹوکن کی علامت جیسے: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "ایکسچینج کے لئے ٹن ٹرانزیکشن بھیجتے وقت براہ کرم میمو آئی ڈی کی وضاحت کرنا نہ بھولیں",
   "tor_connection": "ﻦﺸﮑﻨﮐ ﺭﻮﭨ",
   "tor_connection_timeout": "ٹور کنکشن ٹائم آؤٹ",
   "tor_experimental": "یہ ایک تجرباتی خصوصیت ہے ، کیک پرس پرس سپورٹ ٹور روٹنگ سے بنے تمام رابطے نہیں - کچھ رابطے کلینیٹ کا استعمال کرسکتے ہیں ، تاکہ مکمل طور پر ایپ ٹریفک کو VPN وضع کے ساتھ ٹور کا استعمال کریں۔",
@@ -1106,13 +1106,11 @@
   "widgets_seed": "بیج",
   "wouoldLikeToConnect": "؟ﮯﮔ ﮟﯿﮨﺎﭼ ﺎﻧﮍﺟ",
   "write_down_backup_password": "براہ کرم اپنا بیک اپ پاس ورڈ لکھیں، جو آپ کی بیک اپ فائلوں کی درآمد کے لیے استعمال ہوتا ہے۔",
-  "xlm_extra_info": "ایکسچینج کے لیے XLM ٹرانزیکشن بھیجتے وقت براہ کرم میمو ID بتانا نہ بھولیں۔",
   "xmr_available_balance": "دستیاب بیلنس",
   "xmr_full_balance": "مکمل بیلنس",
   "xmr_hidden": "پوشیدہ",
   "xmr_to_error": "XMR.TO غلطی",
   "xmr_to_error_description": "غلط رقم۔ اعشاریہ پوائنٹ کے بعد زیادہ سے زیادہ 8 ہندسے",
-  "xrp_extra_info": "ایکسچینج کے لیے XRP ٹرانزیکشن بھیجتے وقت ڈیسٹینیشن ٹیگ بتانا نہ بھولیں۔",
   "yat": "Yat",
   "yat_address": "Yat ایڈریس",
   "yat_alert_content": "Cake والیٹ کے صارفین اب ایک قسم کے ایموجی پر مبنی صارف نام کے ساتھ اپنی تمام پسندیدہ کرنسیاں بھیج اور وصول کر سکتے ہیں۔",
