--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -356,6 +356,7 @@
   "event": "Sự kiện",
   "events": "Các sự kiện",
   "exchange": "Trao đổi",
+  "exchange_extra_info": "Xin đừng quên chỉ định bản ghi nhớ hoặc ID bổ sung trong khi gửi giao dịch này để trao đổi",
   "exchange_incorrect_current_wallet_for_xmr": "Nếu bạn muốn trao đổi XMR từ CAPE CAME MONERO BALANCE, vui lòng chuyển sang ví Monero của bạn trước.",
   "exchange_new_template": "Mẫu mới",
   "exchange_provider_unsupported": "${providerName} không còn được hỗ trợ nữa!",
@@ -929,7 +930,6 @@
   "token_name": "Tên token ví dụ: Tether",
   "token_symbol": "Ký hiệu token ví dụ: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Xin đừng quên chỉ định ID ghi nhớ trong khi gửi giao dịch tấn cho trao đổi",
   "tor_connection": "Kết nối Tor",
   "tor_connection_timeout": "Thời gian chờ kết nối tor",
   "tor_experimental": "Đây là một tính năng thử nghiệm, không phải tất cả các kết nối được làm từ Wake Wallet Hỗ trợ định tuyến TOR - một số kết nối có thể sử dụng ClearNet, để định tuyến đầy đủ về lưu lượng truy cập ứng dụng Tor với chế độ VPN.",
@@ -1101,13 +1101,11 @@
   "widgets_seed": "Hạt giống",
   "wouoldLikeToConnect": "muốn kết nối",
   "write_down_backup_password": "Vui lòng ghi lại mật khẩu sao lưu của bạn, được sử dụng để nhập các tệp sao lưu của bạn.",
-  "xlm_extra_info": "Vui lòng đừng quên chỉ định Memo ID khi gửi giao dịch XLM để trao đổi",
   "xmr_available_balance": "Số dư khả dụng",
   "xmr_full_balance": "Số dư đầy đủ",
   "xmr_hidden": "Bị ẩn",
   "xmr_to_error": "Lỗi XMR.TO",
   "xmr_to_error_description": "Số tiền không hợp lệ. Giới hạn tối đa 8 chữ số sau dấu thập phân",
-  "xrp_extra_info": "Vui lòng đừng quên chỉ định Destination Tag khi gửi giao dịch XRP để trao đổi",
   "yat": "Yat",
   "yat_address": "Địa chỉ Yat",
   "yat_alert_content": "Người dùng Cake Wallet hiện có thể gửi và nhận tất cả các loại tiền yêu thích của họ với tên người dùng dựa trên emoji độc đáo.",
